# agent-performance-hub

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  agent-performance-hub-prompt.md  pyproject.toml  skills_registry.json  test_out.txt
.agent/: __init__.py
.agent/debug/: baseline_prompt.txt  optimized_prompt.txt  performance-benchmarks.md  token-metrics.json
.agent/knowledge/: project-architecture.md  team-conventions.md  tech-stack.md
.agent/methodology/: context-engineering-framework.md
.agent/rules/: README_AGENT.md  anthropic-behavior-rules.md  antigravity-ide-rules.md  global-rules.md  web-development-rules.md
.agent/skills/: dummy-skill.md
.agent/skills/api-design-principles/references/: api_reference.md
.agent/skills/api-design-principles/scripts/: example.py
.agent/skills/code-generation/: agentic-coding-updates.md  gemini-3-1-capabilities.md
.agent/skills/expert-skill-creator/: SKILL.md
.agent/skills/expert-skill-creator/scripts/: init_skill.py  quick_validate.py
.agent/skills/expert-streamlit-dashboard/: SKILL.md
.agent/skills/expert-streamlit-dashboard/references/: api_reference.md
.agent/skills/expert-streamlit-dashboard/scripts/: example.py
.agent/skills/kubernetes-operator-dev/: SKILL.md
.agent/skills/kubernetes-operator-dev/references/: api_reference.md
.agent/skills/kubernetes-operator-dev/scripts/: example.py
.agent/skills/mcp-setup-antigravity/: SKILL.md
.agent/skills/sql-expert/: SKILL.md
.agent/skills/visualization/: mermaid-graphs.md
.agent/skills/workflow-automation/: n8n.md
.agent/sources/: OFFICIAL_SOURCES.md
.agent/sources/archive/: sources-2026-02-week2.json  sources-2026-02.json  sources-2026-03.json  sources-2026-06-week2.json  sources-2026-06.json
.github/workflows/: agent-test.yml  aph-tests.yml  badge-metrics.yml  prompt-audit.yml  publish-beta.yml  publish-prod.yml  update-sources.yml
aph/: __init__.py  __main__.py  _version.py  cli.py  config.py  installer.py  registry.py  skills_registry.json
aph.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
aph/bundled/debug/: token-metrics.json
aph/bundled/knowledge/: context7.md
aph/bundled/methodology/: prompt-patterns.md
aph/bundled/skills/code-generation/: web-app-vibe-coding.md
aph/bundled/skills/data-engineering/: data-pipelines.md
docs/: EXAMPLES.md  HOW_TO_USE.md  REGISTRY_SETUP.md  SETUP_SECRETS.md  VISUAL_GUIDE.md
examples/: README.md
prompts/: jules_weekly_watch.md
scripts/: archive_sources.py  audit_agent_structure.py  calc_token_efficiency.py  check_orphaned_files.py  generate_registry.py  monitor_anthropic.py  monitor_antigravity.py  monitor_google_ai.py  parse_deepseek_releases.py  update_badge.py  validate_links.py
tests/: conftest.py  test_ci_workflows.py  test_cli.py  test_cli_help_integration.py  test_config.py  test_generate_registry.py  test_installer.py  test_packaging.py  test_registry.py  test_uninstall.py
(+458 files in other folders)
